Return error if responsibility cannot be determined